--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   width : 500px;
   height : 500px;
   border-radius : 10px;
-  background-color : lightseagreen;
+  background-color : #00b1d2ff;
   display : flex;
   flex-direction : column;
   justify-content : center;
@@ -22,6 +22,7 @@
   border : none;
   border-radius: 5px;
   font-size: 20px ;
+  background-color : #fddb27ff;
 }
 .Quiz {
   width : 500px;
